# etac

./: Cargo.toml  README.md  rustfmt.toml
compiler/etac/: Cargo.toml
compiler/etac/src/: main.rs
compiler/etac/tests/: integration.rs
compiler/etac/tests/pa1/: badescape.eta  consecutive_operators.lexedsol  empty_hex_escape.eta  empty_hex_escape.lexedsol  escape_double_quote.lexedsol  escape_hex_newline.lexedsol  escape_null_cr.lexedsol  ethScript  identifier_with_primes.lexedsol  intoverflow.eta  modulo_operator.lexedsol  supplementary_outofbounds.eta  supplementary_outofbounds.lexedsol  surrogate_char.eta  surrogate_char.lexedsol  surrogate_string.lexedsol  unicode_bmp_char.lexedsol
compiler/etac/tests/pa2/: array_decls.eta  array_decls.parsedsol  chained_comparison.eta  chained_if.eta  complex_interface.eti  dangling_else.eta  dangling_else.parsedsol  deeply_nested.eta  empty_array.parsedsol  error_assign_brace.parsedsol  error_assign_paren.eta  error_eta_nofunctions.parsedsol  error_eta_unfinished.parsedsol  error_expr_as_stmt.eta  error_expr_as_stmt.parsedsol  error_length_as_id.eta  error_return_not_last.parsedsol  full_precedence.eta  full_precedence.parsedsol  funccall_index_rhs.eta  funccall_index_rhs.parsedsol  funccall_indexing.parsedsol  gd_assign01.parsedsol  gd_block02.eta  globals_interleaved.parsedsol  if_no_parens.parsedsol  length_array.parsedsol  multi_var_decls.eta  multi_var_decls.parsedsol  multi_wildcard.eta  negative_global.parsedsol  nested_blocks.parsedsol  nested_empty_blocks.parsedsol  no_type_decl.parsedsol  paren_expr.eta  proc_return_value.eta  proc_return_value.parsedsol  procedure.eta  referr_block01.parsedsol  referr_empty.parsed  (+11 more)
compiler/etac/tests/pa6/: ethScript
compiler/etac_ast/: Cargo.toml
compiler/etac_ast/src/: lib.rs  printer.rs  span_table.rs
compiler/etac_cache/src/: sources.rs
compiler/etac_driver/: Cargo.toml
compiler/etac_driver/src/: compat.rs  lib.rs  resolve.rs  status.rs
compiler/etac_errors/: Cargo.toml
compiler/etac_errors/src/: dcx.rs  diagnostic.rs  drop_bomb.rs  emitter.rs  lib.rs  macros.rs
compiler/etac_lexer/: Cargo.toml
compiler/etac_lexer/src/: internal_error.rs  lib.rs  strings.rs
compiler/etac_lexer/tests/: lexer.rs
compiler/etac_lexer/tests/cases/pa1/: consecutive_operators.eta  escape_double_quote.eta  escape_null_cr.eta  identifier_with_primes.eta  interface.eti  max_int_boundary.eta  max_valid_codepoint.eta  supplementary_char.eta  surrogate_string.eta  unicode_bmp_char.eta
compiler/etac_parse/: Cargo.toml
compiler/etac_parse/src/: grammar.lalrpop  lib.rs  tests.rs
compiler/etac_parse/tests/: error_recovery.rs  parse.rs
compiler/etac_resolve/src/: lib.rs
compiler/etac_session/: Cargo.toml
compiler/etac_session/src/: cli.rs  logger.rs
compiler/etac_session/src/logger/: lex.rs  parse.rs
compiler/etac_span/: Cargo.toml
compiler/etac_span/src/: ariadne_compat.rs  id.rs  lib.rs  sources.rs
compiler/etac_span/src/sources/: global_context.rs
compiler/etac_test/src/: lib.rs
compiler/etac_typecheck/: Cargo.toml
compiler/etac_typecheck/src/: collect.rs  context.rs  lib.rs  types.rs
etac_tests/pa1/: surrogate_char.lexedsol  surrogate_string.lexedsol
etac_tests/pa2/: lexer_error.parsedsol
proc_macros/etac_ast_derive/src/: lib.rs
scripts/: Dockerfile  ethScript  runtests.sh
src/: ast.rs  cli.rs  context.rs  errors.rs  flags.rs  grammar.lalrpop  lexer.rs  logger.rs  main.rs  parser.rs  resources.rs  sources.rs
src/errors/: diagnostic.rs  no_file_diagnostic.rs
src/parser/: lexer_logger.rs
src/sources/: line_index.rs  span.rs
tests/: regression.rs  sexpr.rs
tests/pa1/: badescape.lexedsol  empty_hex_escape.lexedsol  error_escape_space.lexedsol  error_escape_x.lexedsol  escape_hex_newline.eta  escapes.eta  escapes.lexedsol  high_mul_operator.eta  high_mul_operator.lexedsol  interface.lexedsol  keyword_prefix_identifiers.eta  keyword_prefix_identifiers.lexedsol  large_int.lexedsol  max_int_boundary.lexedsol  max_valid_codepoint.lexedsol  multiline_string.lexedsol  string_tab.lexedsol  supplementary_char.lexedsol  supplementary_outofbounds.lexedsol  surrogate_string.lexedsol  unclosedescape.eta  unclosedescape.lexedsol
tests/pa2/: all_comparisons.eta  all_comparisons.parsedsol  array_chain_index.eta  array_chain_index.parsedsol  bool_short_circuit.eta  bool_short_circuit.parsedsol  chained_comparison.parsedsol  chained_if.parsedsol  complex_interface.parsedsol  deeply_nested.parsedsol  empty_array.eta  empty_body.parsedsol  err_toss_indexing.eta  err_toss_indexing.parsedsol  error_assign_brace.eta  error_assign_string.eta  error_assign_string.parsedsol  error_empty_eta.parsedsol  error_eta_nofunctions.parsedsol  error_eta_unfinished.eta  error_eti_unfinished.eti  error_if_start.parsedsol  error_length_as_id.parsedsol  error_return_not_last.eta  error_return_start.parsedsol  error_use_after_def.eta  error_use_after_def.parsedsol  error_while_start.parsedsol  ethScript  ethScriptFixes  etierr_x01.eti  etierr_x01.parsedsol  fancy_ids.eta  fancy_ids.parsedsol  funccall_indexing.eta  gd_assign01.eta  gd_assign03.eta  gd_assign03.parsedsol  gd_assign04.eta  gd_assign04.parsedsol  (+46 more)
tests/pa4/: ethScript
tests/pa5/: ethScript
tests/test_harness/: sexpr.rs
