[workspace]
resolver = "3"
members  = ["compiler/*", "proc_macros/*"]
default-members = ["compiler/etac"]

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
enum_glob_use = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Skylar Abruzese"]

[workspace.dependencies]
# external
logos 		= { git = "https://github.com/maciejhirsz/logos", branch = "master" }
ariadne         = "0.6"
clap            = { version = "4.5", features = ["derive"] }
either          = "1"
lalrpop         = "0.23"
lalrpop-util    = { version = "0.21", features = ["lexer", "unicode"] }
pretty          = "0.12"
unicode-width   = "0.2"
tempfile 	= "3.27.0"

# internal
etac	      = { path = "compiler/etac"}
etac_ast      = { path = "compiler/etac_ast" }
etac_driver   = { path = "compiler/etac_driver" }
etac_errors   = { path = "compiler/etac_errors" }
etac_lexer    = { path = "compiler/etac_lexer" }
etac_parse    = { path = "compiler/etac_parse" }
etac_session  = { path = "compiler/etac_session" }
etac_span     = { path = "compiler/etac_span" }

# TESTING DEPENDENCIES
similar-asserts = "2"
env_logger      = "0.11"
log             = "0.4"
generate_tests	= { path = "proc_macros/generate_tests" }
